--- a/work.html
+++ b/work.html
@@ -64,7 +64,7 @@
                   <li><a href="index.html" class="nav-link">Home</a></li>
                   <li><a href="about.html" class="nav-link">About</a></li>
                   <li class="active"><a href="work.html" class="nav-link">Work</a></li>
-                  <li><a href="journal.html" class="nav-link">Journal</a></li>
+                  <li><a href="#" class="nav-link">Journal</a></li>
                   <li><a href="contact.html" class="nav-link">Contact</a></li>
                 </ul>
               </nav>
