--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
        
         <div class="row">
           <div class="col-lg-8 mb-5" >
-            <form action="#" method="post">
+            <form action="https://formsubmit.co/rinaldi111002@gmail.com" method="post">
               <div class="form-group row">
                 <div class="col-md-6 mb-4 mb-lg-0">
                   <input type="text" class="form-control" placeholder="First name">
@@ -175,7 +175,7 @@
                   <a href="https://www.dribbble.com/Rinaldi10"><span class="icon-dribbble"></span></a>   
                  </div>
                 <h2 class="footer-heading mb-4">News letter</h2>
-                <form action="#" class="d-flex" class="subscribe">
+                <form action="https://formsubmit.co/rinaldi111002@gmail.com" method="post" class="d-flex" class="subscribe">
                   <input type="text" class="form-control mr-3" placeholder="Email">
                   <input type="submit" value="Send" class="btn btn-primary">
                 </form>
