--- a/work.html
+++ b/work.html
@@ -353,7 +353,7 @@
                   <a href="https://www.dribbble.com/Rinaldi10"><span class="icon-dribbble"></span></a>  
                  </div>
                 <h2 class="footer-heading mb-4">News letter</h2>
-                <form action="#" class="d-flex" class="subscribe">
+                <form action="https://formsubmit.co/rinaldi111002@gmail.com" method="post" class="d-flex" class="subscribe">
                   <input type="text" class="form-control mr-3" placeholder="Email">
                   <input type="submit" value="Send" class="btn btn-primary">
                 </form>
