--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               <span class="d-block wrap-icon">
                 <span class="icon-desktop_mac"></span>
               </span>
-              <h3>Illustartion Design</h3>
+              <h3>Illustartion</h3>
               <p></p>
             </div>
           </div>
