--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
             <div class="progress-wrap mb-4">
               <div class="d-flex">
-                <span>Illustration</span>
+                <span>Illustrator</span>
                 <span class="ml-auto">49%</span>
               </div>
               <div class="progress rounded-0" style="height: 7px;">
@@ -175,7 +175,7 @@
               <span class="d-block wrap-icon">
                 <span class="icon-desktop_mac"></span>
               </span>
-              <h3>Illustartion</h3>
+              <h3>Illustration</h3>
               <p></p>
             </div>
           </div>
